adding hero banner + font style

--- a/index.html
+++ b/index.html
@@ -8,27 +8,31 @@
   <link rel="stylesheet" type="text/css" href="/styles/fonts.css">
   <link rel="stylesheet" type="text/css" href="/styles/global.css">
   <link rel="stylesheet" type="text/css" href="styles/lab_four_starter.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
   <title>Common Website Features</title>
 </head>
+
 <body>
   <section class="hero-container">
-    <!-- Remove and add hero banner HTML -->
-    <div class="remove-assignment-content">
-      <h1>Hero Banner</h1>
-    </div>
+      <h1>Audiophile Lounge</h1>
   </section>
+
   <section class="container content-container">
     <!-- Remove and add content HTML -->
     <div class="remove-assignment-content">
       <h1>Content</h1>
     </div>
   </section>
+
   <section class="container accordion-container">
     <!-- Remove and add accordion HTML -->
     <div class="remove-assignment-content">
       <h1>Accordion</h1>
     </div>
   </section>
+
   <section class="footer-container">
     <!-- Remove and add footer HTML -->
     <div class="remove-assignment-content">
