--- a/index.html
+++ b/index.html
@@ -11,33 +11,37 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Imbue:opsz,wght@10..100,900&display=swap" rel="stylesheet">
-  <title>Common Website Features</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/js" href="/java/main.js">
+  <link rel="stylesheet" type="text/css" href="/styles/responsiveness.css">
+  <title>The Audiophile Lounge</title>
 </head>
 
 <body>
   <section class="hero-container">
-      <h1>Audiophile Lounge</h1>
+    <h1>The Audiophile Lounge</h1>
   </section>
 
   <section class="container content-container">
-    <!-- Remove and add content HTML -->
-    <div class="remove-assignment-content">
-      <h1>Content</h1>
+    <div class="vinyl img">
+      <img src="/assets/vinyl record.jpg" class="record" alt="7 Inch Vinyl Record">
+    </div>
+    <div class="vinyl-text">
+      <h1>What's a vinyl record?</h1>
+        <p>Vinyl records were first introduced in the late 19th century but gained significant popularity in the mid-20th century, particularly from the 1950s through the 1980s. They come in various sizes, with the most common being 12 inches in diameter for LPs (long-playing records) and 7 inches for singles.</p>
+        <p>Vinyl records have grooves engraved on both sides that contain analog sound information. A stylus, or needle, is used to track these grooves, converting the physical movements into electrical signals that can be amplified and played through speakers.</p>
     </div>
   </section>
 
   <section class="container accordion-container">
-    <!-- Remove and add accordion HTML -->
-    <div class="remove-assignment-content">
       <h1>Accordion</h1>
-    </div>
   </section>
 
   <section class="footer-container">
-    <!-- Remove and add footer HTML -->
-    <div class="remove-assignment-content">
+    <div class="fontsnstuff">
       <h1>Footer</h1>
     </div>
   </section>
 </body>
-</html>
