--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="container content-container">
     <div class="vinyl img">
-      <img src="/assets/vinyl record.png" class="record" alt="7 Inch Vinyl Record">
+      <img src="./assets/vinyl record.png" class="record" alt="7 Inch Vinyl Record">
     </div>
     <div class="vinyl-text">
       <h1>What's a vinyl record?</h1>
@@ -33,7 +33,7 @@
         <p>Vinyl records have grooves engraved on both sides that contain analog sound information. A stylus, or needle, is used to track these grooves, converting the physical movements into electrical signals that can be amplified and played through speakers.</p>
         <button id="song" class="songbutton" onClick="playPause()">
           <audio
-            src="/assets/Nocturne in E flat major, Op. 9 no. 2.mp3"
+            src="./assets/Nocturne in E flat major, Op. 9 no. 2.mp3"
             autoplay
             loop
           ></audio> Play Me
