--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
 
   <section class="container content-container">
     <div class="vinyl img">
-      <img src="./assets/vinyl record.png" class="record" alt="7 Inch Vinyl Record">
-    </div>
+      <img src="./assets/vinyl record.png" class="record" alt="7 Inch Vinyl Record"></div>
     <div class="vinyl-text">
       <h1>What's a vinyl record?</h1>
         <p>Vinyl records were first introduced in the late 19th century but gained significant popularity in the mid-20th century, particularly from the 1950s through the 1980s. They come in various sizes, with the most common being 12 inches in diameter for LPs (long-playing records) and 7 inches for singles.</p>
         <p>Vinyl records have grooves engraved on both sides that contain analog sound information. A stylus, or needle, is used to track these grooves, converting the physical movements into electrical signals that can be amplified and played through speakers.</p>
         <button id="song" class="songbutton" onClick="playPause()">
-          <audio
-            src="./assets/Nocturne in E flat major, Op. 9 no. 2.mp3"
+          <audio src="./assets/Nocturne in E flat major, Op. 9 no. 2.mp3"
             autoplay
             loop
           ></audio> Play Me
@@ -105,7 +103,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d191100.63794658487!2d-114.39323088568403!3d51.00002778557735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53716f9268a69e81%3A0xb1db5e68bd61e28!2sSouthern%20Alberta%20Institute%20of%20Technology!5e0!3m2!1sen!2sca!4v1710042334826!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
       <div class="cc">
-        <span id="year"></span></p>
+        <span id="year"></span>
         <script>let currentYear = new Date().getFullYear();
           document.getElementById("year").innerText = `© ${currentYear} Gail Salinas`;</script>
     </div>
