--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="container content-container">
     <div class="vinyl img">
-      <img src="./assets/vinyl record.png" class="record" alt="7 Inch Vinyl Record"></div>
+      <img src="./assets/vinyl record.png" class="record" alt="Black 7 Inch Vinyl Record"></div>
     <div class="vinyl-text">
       <h1>What's a vinyl record?</h1>
         <p>Vinyl records were first introduced in the late 19th century but gained significant popularity in the mid-20th century, particularly from the 1950s through the 1980s. They come in various sizes, with the most common being 12 inches in diameter for LPs (long-playing records) and 7 inches for singles.</p>
