final final changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   <section class="hero-container">
     <h1>The Audiophile Lounge</h1>
+    <h2>For the better Listening Experience</h2>
   </section>
 
   <section class="container content-container">
